--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,8 +16,8 @@ bytesize = { version = "1.1.0", features = ["serde"] }
 config = "0.13"
 futures = "0.3"
 itertools = "0.11"
-metrics = "0.16"
-metrics-exporter-prometheus = "0.5"
+metrics = "0.22"
+metrics-exporter-prometheus = "0.13"
 thiserror = "1"
 parquet2 = { version = "0.17", default_features = false }
 parquet-format-safe = "0.2"
@@ -36,7 +36,8 @@ tokio-stream = { version = "0.1", features = ["signal"] }
 chrono = "0.4"
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.4", features = ["trace"] }
-sqlx = { version = "0.7", features = [
+# TODO: 0.7.4 adds a deprecation warning that will need to be fixed down the road
+sqlx = { version = "=0.7.3", features = [
   "chrono",
   "sqlite",
   "runtime-tokio-rustls",
